FLBetances/environment/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aspnetapp
  labels:
    name: aspnetapp
    managed-by: kustomize
