FLBetances/environment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: aspnetapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aspnetapp-web
                port:
                  number: 80
